# hackers_manifesto

./: Cargo.toml  LICENSE  README.md  hackers_manifesto.pyd  pyproject.toml
.github/workflows/: CI.yml
scripts/: smoke_test.py
src/: main.rs
